add confirm window when click delete button